--- a/sections/Design/TargetDesign.tex
+++ b/sections/Design/TargetDesign.tex
@@ -26,11 +26,7 @@ also ensures that the camera always sees the target as the same size.\nl
 In order to make the target move cart was designed. This cart consists of a
 platform to place the target on and three wheels that are all fixed so they can
 not turn. An NXT is used to control the speed of the cart, to ensure that it
-travels at a constant speed.\nl
-
-Now that the a final design has been deciced on, it is possible to implement the
-functionality that goes into hitting a moving target.
-
+travels at a constant speed.\fix{Add picture of the target}{}
 
 
 
