--- a/sections/Analyse/SystemDescription/Conclusion.tex
+++ b/sections/Analyse/SystemDescription/Conclusion.tex
@@ -16,12 +16,9 @@ different aspects can be used in relation to the \name system.
   observe the state it must be able to reason under uncertainty. To do this the
   agent can use a belief network to try and predict the future based on
   observations.
-  \item The four different elements of real-time systems can be used to form a
-  basis for consideration when developing the system. In relation to this
-  project it will be especially important to consider how timeliness and
-  deadlines interact in order to make sure that the turret is capable of
-  computing all the input data in a timely fashion such that it is able to hit a
-  moving target.
+  \item \name can be considered a firm real-time system, as once certain
+  deadlines have passed, for instance when firing, the information becomes
+  obsolete and is no longer useful, as the target will have moved on. 
 \end{itemize}  
 
 With the system analysed, it is now possible to determine how we ensure that
