- Say wut.... wut

--- a/sections/Sensors/Camera.tex
+++ b/sections/Sensors/Camera.tex
@@ -38,7 +38,7 @@ coloured paper is a dark background which is used in some, but not all
 tests.
 This setup can be seen in \autoref{SensorCamSetup.JPG}.
 
-\figx[0.1]{SensorCamSetup.JPG}{Setup for the camera test (With Background).}
+\figx[0.15]{SensorCamSetupV2}{Setup for the camera test (With Background).}
 
 \subsection{Camera Test Results - Colours}\label{CamTestColours}
 In order to determine what colour can best be detected, the target is wrapped
