--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -36,8 +36,16 @@ This design has several advantages, Lego Technic has a ball launcher which can
 store several small ball projectiles. This allows us to have an easily
 reloadable and fast firing cannon, which can hold up to 6 shots.\nl
 
-Using this design\ldots \fix{Add graph that show the error margin at various
-angles}{\ldots}.\nl
+Using this design a test to find how accurate it is at fireing the projectile
+to the expected distance was conducted.
+In this test the turret was set to an angle before fireing. The distance was
+then measured by having the projectile landing in a layer of flour on the
+ground. The test was conducted twice The average distance for each angle in
+both datasets was calculated and plotted in a graph against the the angle,
+which is seen in \autoref{Accuracy}. This shows that
+
+\graphLNo{Angle}{Distance [cm]}{DistVSAngleTestset1,
+DistVSAngleTestset2}{Dataset 1, Dataset 2}{Results from accuracy test}{Accuracy}
 
 The cannon is mounted on a mechanism that is used to angle it such that it
 is able to shoot a target at varying distances. This mechanism works by having a
