--- a/setup/macros.tex
+++ b/setup/macros.tex
@@ -271,7 +271,22 @@ rettes} \autopageref{retRefMacro}\\}
 \label{graph:#5}
 \end{graphEnv}
 }
-
+\newcommand{\graphNL}[5]{%
+\begin{graphEnv}
+\begin{graphFloat}
+\centering
+\begin{tikzpicture}
+	\begin{axis}[xlabel={#1}, ylabel={#2}, xmin=0,
+	ymin=0, minor tick num = 3,only marks, /pgfplots/grid = both, axis lines =
+	left]
+	\forcsvlist{\ap}{#3}
+	\end{axis}
+\end{tikzpicture}
+\caption{#4}
+\end{graphFloat}
+\label{graph:#5}
+\end{graphEnv}
+}
 \newcommand{\dataTable}[3]{%
 \begin{table}[H]
 \centering
@@ -305,6 +320,23 @@ column type/.add={}{|}
 \end{graphEnv}
 }
 
+\newcommand{\graphLNo}[6]{%
+\begin{graphEnv}
+\begin{graphFloat}
+\centering
+\begin{tikzpicture}
+	\begin{axis}[xlabel={#1}, ylabel={#2}, xmin=0,
+	ymin=0, minor tick num = 3, only marks, /pgfplots/grid = both, axis lines =
+	left,legend style={ at={(1.3,0.5)}, anchor=center},] 
+	\forcsvlist{\ap}{#3}
+	\forcsvlist{\al}{#4}
+	\end{axis}
+\end{tikzpicture}
+\caption{#5}
+\end{graphFloat}
+\label{graph:#6}
+\end{graphEnv}
+}
 \newcommand{\ap}[1]{\addplot table {data/#1.dat};}
 \newcommand{\al}[1]{\addlegendentry{#1}}
 
