--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -5,6 +5,13 @@
   year={1999}
 }
 
+@article{Realtime,
+  title={Real-Time Computing: A New Discipline of Computer Science and Engineering},
+  author={Kang G. Shin, Parameswaran Ramanathan},
+  journal={IEEE},
+  year={1994}
+}
+
 @book{OrbitBA,
   title={Orbit BA},
   author={Morten Brydensholt, Tommy Gjøe, Jens Ingwersen, Claus Jessen, Ole Keller, Jan Møller, Jens Vaaben},
