--- a/sections/Design/Design.tex
+++ b/sections/Design/Design.tex
@@ -1,7 +1,7 @@
-\chapter{Design}
+\chapter{Mechanical Design}
 
-In this chapter the thoughts that went into the design of the turret will be
-discussed and the final design will be presented. The design of the target will
+In this chapter the tinkering process and the thoughts that went into the design
+of the turret will be discussed and the final design will be presented. The design of the target will
 also be also be discussed.
 
 \input{sections/Design/TurretDesign.tex}
