--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -3,9 +3,8 @@ The turret can be considered the product of 3 different design choices, the
 shooting mechanism, the base and the sensor placement. These 3 parts of the
 turret not only has to work on their own, but also come together as a whole.\nl
 
-The final design of the turret consists of a number of different parts. first
-and foremost a shooting mechanism with a piston that pushes the projectile
-through a mouthpiece that clamps around it. It also has an angeling mechanism
+The final design of the turret uses a shooting mechanism with a piston
+that pushes the projectile through a mouthpiece that clamps around it. It also has an angeling mechanism
 that the shooting mechanism is mounted on. These two parts sit on top of a
 base where the NXT is mounted inside to distribute the weight and to make it
 shorter. On the front of this bas two ultrasonic sensor placed in order to make
