--- a/sections/Design/TargetDesign.tex
+++ b/sections/Design/TargetDesign.tex
@@ -2,7 +2,7 @@
 When designing the target a few things need to be considered. As stated in
 \autoref{FeatAndReq} The target needs to move fast enough to make \name
 calculate an offset. The turret also needs to be able to calculate this offset,
-which means that it needs to be able see the target. To make determine the
+which means that it needs to be able see the target. To determine the
 best colour for the target the tests in \autoref{CamTest} was conducted. From
 these tests we came to the conclusion that the target needs to be orange in
 order to get the best results from the camera.
